fixing display on mobile

--- a/styles.css
+++ b/styles.css
@@ -445,6 +445,7 @@ form {
   width: 100%;
   height: 60px;
   background-color: #cccccc;
+  justify-content: center;
 }
 .cancel {
   background-color: #cccccc;
@@ -588,11 +589,8 @@ form {
   }
   
   .cancel {
-    width: 50px;
     margin-left: 200px;
   }
 
-  .save {
-    width: 50px;
-  }
+  
 }
